# Piet

./: .gitignore  README.md  TODO.org  ascii_piet_to_piet.py  cli.py  generate_number.py  optimize_stk.py  piet_interpreter.py  smpl_to_stk.py  stk_execute.py  stk_interpreter.py  stk_to_ascii_piet.py  stk_to_piet.py  todo.txt
Rust/: Cargo.toml  test.txt
Rust/lib/: add.lib  append.lib  copy_memory.lib  div.lib  dup.lib  dup_at_depth.lib  dup_at_depth_smpl.lib  eq.lib  get_at_depth.lib  get_elem.lib  get_heap.lib  get_list.lib  greater.lib  in.lib  inC.lib  inN.lib  length.lib  malloc.lib  mod.lib  mul.lib  not.lib  outC.lib  outN.lib  pop.lib  pre_branch.lib  printC_list_of_list.lib  print_listC.lib  print_listN.lib  push.lib  put_at_depth.lib  readC_until.lib  readlines.lib  roll.lib  set_elem.lib  set_heap.lib  stk_eq.lib  sub.lib  swap_at_depth.lib  swap_at_depth_smpl.lib  swap_smpl.lib
Rust/src/: lib.rs  optimize_stk.rs  piet_color.rs  piet_interpreter.rs  util.rs
Rust/src/advc/: advc.pest  advc_to_mid_smpl.rs  mod.rs
Rust/src/mid_smpl/: expr.rs  (+4 more)
Rust/tests/: .gitignore  lib.rs  test_append.stk  test_append_optim.stk  test_dup_at_depth.stk  test_dup_at_depth_optim.stk  test_eq0.smpl  test_eq0.stk  test_eq0_optim.stk  test_eq1_optim.stk  test_in_tuple.smpl  test_in_tuple.stk  test_in_tuple_optim.stk  test_length.stk  test_print_listC.smpl  test_print_listC.stk  test_print_listC_optim.stk  test_readlines.stk  test_set_elem_get_elem.stk  test_set_elem_get_elem_optim.stk  test_set_var_get_var.smpl  test_set_var_get_var_optim.stk  test_swap.stk  test_swap_optim.stk
(+160 files in other folders)
