[package]
name = "piet"
version = "0.1.0"
edition = "2021"

[lib]
# name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "piet"

[[bin]]
name = "piet_stack"

[[bin]]
name = "mid_smpl"

[[bin]]
name = "advc"

[[bin]]
name = "piet_optimize_stk"

[[test]]
name = "lib"

[dependencies]
image = "*"

clap = { version = "*", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
itertools = "*"
ndarray = "*"

pest = "*"
pest_derive = "*"

sdl2 = "*"

[dependencies.druid]
version = "*"
features = ["image"]